
=item * The 'cd' builtin now has a (currently unlimited) history list, accessible using cd -/+/%number. The new builtin 'dirs' displays the stack - warp [2000-03-13]

=item * On Unix, support for a global pshrc file at /etc/pshrc - warp [2000-03-13]

=back

=head2 Bugfixes

=over 4

=item * Fixed some small problems with globbing code - warp [2000-03-09]

=item * Fixed problem with pod2man and CHANGES.pod reported on Sourceforge - warp [2000-03-11]

=item * SIGTERM and HUP is now not ignored anymore and exits the Perl Shell instead  - warp [2000-03-11]

=item * switch -r now reserved for restricted mode, new switch -f for alternative resource file - warp [2000-03-12]

=item * Fixed problem with quoting which was not removed for the executable strategy - warp [2000-03-12]

=back

=cut

###############################################################################
###############################################################################
##
## 0.007
##
###############################################################################
###############################################################################


=head1 0.007 [2000-02-14]

Contributions primarily by Markus Peter (C<warp>) and Simon Huggins
(C<huggie>).


=head2 New Features

=over 4

=item *

Support for window titles. New environment variable C<$PSH_TITLE>,
C<$Psh::change_title>, C<$Psh::window_title>. The behavior is like prompt
strings.

=item *

Strategy B<perlfunc> is a default strategy again. C<$Psh::perlfunc_builtins>
determines wether Perl builtins should be C<eval>ed (default 0)

=item *

Builtin B<kill> now supports sending a signal to a named job (e.g. "C<emacs & ;
kill emacs>").

=item *

Builtin B<strategy> for loading strategies on demand and adding them to
the list of strategies to use. Handy for strategies that are used less often
than the core strategies.

=item *

Properly pipeable aliases.

=item *

Fallback and most other builtins are loaded on demand.

=item *
